[package]
name = "zip_dirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "0.2.0"
async_zip = {version = "0.0.11", features = ["deflate"]}
futures = "0.3.25"
tokio = { version = "1.20.0", features = ["full"] }
bytes = "1.0"
chrono = "0.4"
thiserror = "1.0"
crc32fast = "1.2"
anyhow = "1.0"
structopt = "0.3.26"
path-absolutize = "3.0.14"

[dev-dependencies]
zip = "0.6.3"
